--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,37 @@
 services:
+  postgres:
+    image: postgres:17
+    restart: always
+    # env_file:
+    #   - app/config/.env
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   web:
     build: .
+    # env_file:
+    #   - app/config/.env
     ports:
       - "8000:8000"
+    depends_on:
+      postgres:
+        condition: service_healthy
     volumes:
-      - .:/app
+      - .:/src
+    environment:
+      DATABASE_URL: ${DATABASE_URL}
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000
+
+volumes:
+  postgres_data:
