--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,7 @@ services:
 
   web:
     build: .
-    # env_file:
-    #   - app/config/.env
+
     ports:
       - "8000:8000"
     depends_on:
@@ -31,6 +30,7 @@ services:
       - .:/src
     environment:
       DATABASE_URL: ${DATABASE_URL}
+      SECRET_KEY: ${SECRET_KEY}
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000
 
 volumes:
