--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+itsdangerous==2.2.0
 Jinja2==3.1.5
 Mako==1.3.8
 markdown-it-py==3.0.0
