Creada logica de autenticacion con jwt

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,9 @@ POSTGRES_PASSWORD=<postgres_password>
 POSTGRES_DB=<postgres_db>
 DATABASE_URL=postgresql://<postgres_user>:<postgres_password>@postgres:5432/<postgres_db>
 SECRET_KEY=<secret_key>
+
+# Session Secret Key
+SECRET_KEY=secret
+
+# OAuth2
+TOKEN_SECRET=secret
