--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
     environment:
       DATABASE_URL: ${DATABASE_URL}
       SECRET_KEY: ${SECRET_KEY}
+      TOKEN_SECRET: ${TOKEN_SECRET}
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
 
 volumes:
