--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ psycopg2-binary==2.9.10
 pydantic==2.10.4
 pydantic_core==2.27.2
 Pygments==2.18.0
+PyJWT==2.10.1
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.2
